# sfq

./: README.md
fqlzt/: Cargo.toml  Readme.md  build.rs
fqlzt/examples/data/: fa.tmp  fq.tmp
fqlzt/src/: lib.rs  tests.rs
fqlzt/src/aux/: .lzt  Makefile  Makefile-custom  clean.mk  lzt  lzt-cli  lzt-interface-old.cpp  lzt-interface-old.h  lzt-interface.cpp  lzt-interface.h  lzt-makefile  lzt-old.cpp  lzt-old.hpp  lzt-sync.md  lzt-testcli-old.cpp  lzt-testcli.cpp  lzt-testrun.cpp  lzt-testrunner.cpp  lzt-utils.cpp  lzt.cpp  lzt.hpp  mod.rs  readme.md  testrun-old.sh  testrun.sh  tmp
fqlzt/src/aux/lzt_core/compress/: CompressorFactory.hpp
fqlzt/src/aux/lzt_core/node_array/: na_utils.h
fqlzt/src/aux/lzt_core/serialization/: BitSequenceArray.h  DiskCharArray.cpp  DiskCharArray.h  ICharArray.h  ISerializable.h  MemCharArray.cpp  MemCharArray.h
fqlzt/src/aux/lzt_core/serialization_legacy/: BitSequenceArray.cpp  BitSequenceArray.h  BitVector.h  IntBitArray.h  SerializationUtils.h
fqlzt/src/aux/lzt_core/suffix_array/: CharStringSA.cpp
fqlzt/src/aux/lzt_core/util/: TempFile.cpp  TempFile.h  factory.h  filesystem_utils.cpp  filesystem_utils.h
fqlzt/src/aux/lzt_core/vizualization/: NodeArrayToDot.hpp
fqlzt/src/aux/test-dicts/: fastqdna.txt  french.txt  random.txt
fqlzt/src/aux/test-dicts/fasta/: for_lzt.head  for_lzt.qual  for_lzt.seq
fqlzt/src/aux/test-dicts/natural-lang/: german.txt
fqlzt/src/ffi/: lzt-interface.cpp  lzt-interface.h  lzt-utils.cpp  lzt.cpp  lzt.hpp
fqlzt/src/ffi/lzt_core/: main.cpp
fqlzt/src/ffi/lzt_core/node_array/: na_utils.h
fqlzt/src/ffi/lzt_core/serialization/: BitSequence.h  IntBitArray.h  serialization.h
fqlzt/src/ffi/lzt_core/serialization_legacy/: BitSequenceArray.h  BitVector.cpp  IntBitArray.h
fqlzt/src/ffi/lzt_core/util/: regex.h  utils.h
fqlzt/src/ffi_legacy/: lzt.cpp
fqlzt/src/ffi_legacy/lzt_core/compress/: ICompressor.h
fqlzt/src/ffi_legacy/lzt_core/serialization/: BitPointer.h
fqlzt/src/io/: fastq.rs  mod.rs
fqlzt/src/util/: common.rs  error.rs
sfq/: Cargo.toml  README.md  sfq_bash_test.pl
sfq/data/: fwd.fa  fwd.fq  head.sfq.1  qual.sfq.1  rev.fa  rev.fq  seq.sfq.1
sfq/examples/: dumper.rs  interleave.py
sfq/examples/tests/: sfq_bash_test.pl
sfq/examples/util/: common.rs
sfq/src/: cli.rs  main.rs  output  tests.rs
sfq/src/cmd/: compress.rs  decompress.rs  grep.rs  mod.rs
sfq/src/crates/lzt/: Cargo.toml  build.rs  readme
sfq/src/crates/seq/: .gitignore  Cargo.toml
sfq/src/util/: common.rs
(+208 files in other folders)
