[package]
name = "fqlzt"
version = "0.1.0"
authors = ["Robert Bakaric <rbakaric@irb.hr>, Damir Korencic <dkorencic@irb.hr>"]
edition = "2018"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aux = // add compiled sources
snafu = "*"
clap  = "*"
libc  = "*"
log   = "*"



[build-dependencies]

cc = "*"
