[package]
name = "sfq"
version = "0.2.2"
authors = ["Robert Bakaric <rbakaric@exaltum.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap ="*"
seq = { path = "src/crates/seq" }
lzt = { path = "src/crates/lzt" }
sys-info = "*"
rand = "*"
regex = "*"
fxhash= "*"
