[package]
name = "sfq"
version = "1.0.0"
authors = ["Robert Bakaric <rbakaric@exaltum.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap ="*"
seq = { path = "src/crates/seq" }
lzt = { path = "src/crates/lzt" }
sys-info = "*"
rand = "*"
regex = "*"
fxhash= "*"

[profile.release]
debug = true

#[profile.release.build-override]
#opt-level = 3
#codegen-units = 256
