[package]
name = "lzt"
version = "1.0.0"
authors = ["Robert Bakaric <rbakaric@exaltum.eu>"]
edition = "2018"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aux = // add compiled sources
snafu = "*"
libc  = "*"
rand  = "*"
fxhash= "*"

[build-dependencies]

cc = "*"
